# spaghetto

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: miri_and_proptest.yml  rust.yml
proptest-regressions/: property_tests.txt
src/: destring.rs  devec.rs  lib.rs  property_tests.rs  settings.rs
