[package]
name = "spaghetto"
version = "0.0.1"
edition = "2021"
description = "A library for making double-ended data structures, like an always-contigouous double-ended queue (deque) and double-ended string."
license = "MIT OR Apache-2.0"

# [dependencies]
[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.2.0"
serde = "1.0"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
optional = true

[package.metadata.docs.rs]
features = ["serde"]