[package]
name = "spaghetto"
version = "0.0.4"
edition = "2021"
description = "A library for making double-ended data structures, like an always-contigouous double-ended queue (deque) and double-ended string."
license = "MIT OR Apache-2.0"
repository = "https://github.com/philliard3/spaghetto.git"
categories = ["data-structures"]
keywords = ["vector","vec","string", "deque", "double-ended", "queue"]

# [dependencies]
[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.2.0"
serde = "1.0"
serde_json = "1.0"
rand = { version="0.9.2", features=["std"] }

[dependencies.serde]
version = "1.0"
optional = true

[package.metadata.docs.rs]
features = ["serde"]